--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "framer-motion": "^10.16.4",
     "jquery": "^3.7.0",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
     "styled-components": "^5.3.11",
+    "swiper": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://13.125.88.20:8080/"
 }
