--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^5.8.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "jquery": "^3.7.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.17.0",
@@ -52,5 +57,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://13.125.88.20:8080/"
+  "devDependencies": {
+    "http-proxy-middleware": "^2.0.6",
+    "install": "^0.13.0",
+    "tailwindcss": "^3.3.5"
+  }
 }
