--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://13.125.88.20:8080/",
   "devDependencies": {
     "http-proxy-middleware": "^2.0.6",
     "install": "^0.13.0",
