--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.4",
     "jquery": "^3.7.0",
     "qs": "^6.11.2",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
